--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -31,8 +31,9 @@
     "load_src_from_file = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
-    "srcs_ids = []\n",
-    "srcs_ids = [55034 , 61491, 76243 ,92867,104078,588567,599887] # WDs secure, spectral or GAIA confirmation\n",
+    "srcs_ids = [55034,  61491]\n",
+    "#srcs_ids = [55034 , 61491, 76243 ,92867,104078,588567,599887] # WDs secure, spectral or GAIA confirmation\n",
+    "srcs_ids = [2996 ,11821 ,55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,124860 ,162490 ,182622 ,199884 ,226975 ,267514 ,588567 ,599887 ,789511 ,814134 ,] # WD and candidates, including GAIA info\n",
     "#srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL"
    ]
   },
@@ -46,7 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 7117 selected: 7117\n"
+      "Nr sources: 7117 selected: 7117\n",
+      "'_q','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','BP-RP','RV','e_RV','Vbroad','GRVSmag','QSO','Gal','NSS','XPcont','XPsamp','RVS','EpochPh','EpochRV','MCMCGSP','MCMCMSC','And','Teff','logg','__Fe_H_','Dist','A0','HIP','PS1','SDSS13','SKYM2','TYC2','URAT1','AllWISE','APASS9','GSC23','RAVE5','_2MASS','RAVE6','RAJ2000','DEJ2000','PQSO','PGal','PSS','RPlx','rg_src_id','match_distance','gaiadr3_match_id','Gmag_abs','ogrp',\n"
      ]
     }
    ],
@@ -91,7 +93,11 @@
     "\n",
     "nr_srcs = len(tt_srcs)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
-    "#display(tt_srcs)"
+    "#display(tt_srcs)\n",
+    "strcol = \"\"\n",
+    "for col in rg.tt_gaiadr3.colnames:\n",
+    "    strcol+= \"'\"+str(col)+\"',\"\n",
+    "print(strcol)"
    ]
   },
   {
@@ -111,12 +117,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b552d1be9c4b4cce8a19e509582ef151",
+       "model_id": "a41a7721b7a344cdac67b052d2f0b30d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(55034, 61491, 76243, 92867, 104078, 588567, 5…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(2996, 11821, 55034, 61491, 64360, 73354, 7624…"
       ]
      },
      "execution_count": 3,
@@ -125,6 +131,17 @@
     }
    ],
    "source": [
+    "#Define displayed tables and columns\n",
+    "disp_tt_sources = ['rg_src_id','nr_det','ra','dec','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux','flux_err','flux_nxv','flux_cpval','flux_rchiq','coadd_ffactor',\n",
+    "                   'coadd_fdiff_s2n','nr_fd_srcs','hr','hr_err','simbad_match_id','gaiadr3_match_id'] #'fd_src_id','rg_fd_id,,'pos_var','flux_var','sel'\n",
+    "disp_tt_simbad = ['ogrp','otypes','main_id','otype','ra','dec','ra_prec','dec_prec','coo_err_maja','coo_err_mina','coo_err_angle','coo_qual','coo_wavelength','coo_bibcode','distance_distance','distance_q','distance_unit',\n",
+    "                  'distance_merr','distance_perr','distance_method','distance_bibcode','match_distance','rvz_type','rvz_radvel','rvz_error','rvz_qual','rvz_wavelength','rvz_bibcode','z_value','sp_type','sp_qual',\n",
+    "                  'sp_bibcode','simbad_match_id'] #,'rg_src_id',,'script_number_id'\n",
+    "disp_tt_gaiadr3 = ['ogrp','Gmag_abs','BP-RP','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','RV','e_RV',\n",
+    "                   'Vbroad','GRVSmag','QSO','Gal','NSS','XPcont','XPsamp','RVS','EpochPh','EpochRV','MCMCGSP','MCMCMSC','And','Teff','logg','__Fe_H_','Dist','A0','HIP','PS1','SDSS13','SKYM2','TYC2','URAT1','AllWISE','APASS9',\n",
+    "                   'GSC23','RAVE5','_2MASS','RAVE6','RAJ2000','DEJ2000','PQSO','PGal','PSS','RPlx','match_distance','gaiadr3_match_id'] #,'_q',,'rg_src_id'\n",
+    "dd_tab_col = {\"tt_sources\":disp_tt_sources, \"tt_simbad\":disp_tt_simbad, \"tt_gaiadr3\":disp_tt_gaiadr3}\n",
+    "\n",
     "def display_src_info(rg_src_id=0):\n",
     "\n",
     "    #Get source\n",
@@ -140,20 +157,12 @@
     "    vvis.plot_sed(tc_src,ax = axs[1])\n",
     "    plt.show()\n",
     "\n",
-    "    table_names = [\"tt_sources\",\"tt_simbad\"] # ,\"tt_coadd_sources\"\n",
-    "    for table_name in table_names:\n",
+    "    for table_name, col_names in dd_tab_col.items():\n",
     "        if table_name in tc_src._table_names:\n",
     "            print(\"\\n\",table_name,\":\")\n",
-    "            display(tc_src.__dict__[table_name])\n",
-    "    #Get GAIA info\n",
-    "    coord = SkyCoord(ra=tc_src.tt_simbad[\"ra\"].quantity[0], dec=tc_src.tt_simbad[\"dec\"].quantity[0], frame='icrs')\n",
-    "\n",
-    "    gq = Gaia.cone_search_async(coord, radius=1.0* uu.arcsec)\n",
-    "    gr = gq.get_results()\n",
-    "    gmag_abs = gr[\"phot_g_mean_mag\"][0] + 5.0 * np.log10(gr[\"parallax\"][0]) - 10.0\n",
-    "    print(\"GAIA Gmag\",gmag_abs, \"color\",gr[\"bp_rp\"][0])\n",
+    "            display(tc_src.__dict__[table_name][col_names])\n",
     "    \n",
-    "    tc_src.tt_sed.pprint_all()\n",
+    "    #tc_src.tt_sed.pprint_all()\n",
     "\n",
     "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])"
    ]
@@ -175,12 +184,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b7051ea952140aba73852c7799fed6d",
+       "model_id": "b3a5fc48702a4e64afd541864764a3c0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='block_nr', max=1), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=2, description='block_nr', max=4), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
